Closed Bug 505678 Opened 15 years ago Closed 15 years ago

Downloadable font feature is broken with Sun Studio compiler on Solaris

Categories

(Core :: Graphics, defect)

1.9.1 Branch
All
OpenSolaris
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla1.9.2a1
Tracking Status
status1.9.1 --- .3-fixed

People

(Reporter: ginnchen+exoracle, Assigned: ginnchen+exoracle)

Details

(Keywords: verified1.9.1)

Attachments

(1 file, 1 obsolete file)

#pragma pack(n) would not work for non-POD class (("POD" means "plain old data".) with Sun Studio compiler.
A struct, union, or class is not a POD-class if it has a base class, or a virtual function, or a user-written constructor or destructor, a member of reference type, or a data member of any type that is not a POD.

AutoSwap_PRUint16 has a user-written constructor.
Thus with Sun Studio compiler, sizeof(HeadTable) is 56 rather then 54.
Attached patch patch (obsolete) — Splinter Review
For Sun Studio compiler, override operator = instead of using user-written constructor.
Attachment #389882 - Flags: review?(vladimir)
Attached patch patchSplinter Review
Oops, fix the typo.
Attachment #389882 - Attachment is obsolete: true
Attachment #389883 - Flags: review?(vladimir)
Attachment #389882 - Flags: review?(vladimir)
Attachment #389883 - Flags: review?(vladimir) → review?(jdaggett)
Comment on attachment 389883 [details] [diff] [review]
patch

Bummer about having to stick #ifdef's like this, but yeah, looks fine.
Attachment #389883 - Flags: review?(jdaggett) → review+
http://hg.mozilla.org/mozilla-central/rev/55fd6820c596
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Comment on attachment 389883 [details] [diff] [review]
patch

Asking approval for 1.9.1 branch.

Feature lost on Solaris platform.
No impact for non Sun Studio compiler.
Attachment #389883 - Flags: approval1.9.1.2?
Comment on attachment 389883 [details] [diff] [review]
patch

Not for 1.9.1.2.
Attachment #389883 - Flags: approval1.9.1.2? → approval1.9.1.3?
Comment on attachment 389883 [details] [diff] [review]
patch

Approved for 1.9.1.3. a=NPOTB, aka ss

(Nit: Don't checkin the weird removing and adding of endif at the end of the file.)
Attachment #389883 - Flags: approval1.9.1.3? → approval1.9.1.3+
The weird removing and adding of end if at the end of the file is generated by GNU diff.
It's necessary for add/remove the trailing new line.
The last line would not be changed when applying the patch.
Ginn, can you verify please with the official sources that it's not broken anymore for Firefox 3.5.3? I don't have a Solaris box and cannot build. Thanks.
Target Milestone: --- → mozilla1.9.2a1
Verified with
Mozilla/5.0 (X11; U; SunOS i86pc; en-US; rv:1.9.1.3pre) Gecko/20090824 Shiretoko/3.5.3pre
Status: RESOLVED → VERIFIED
Keywords: verified1.9.1
Thanks Ginn. Given your build id you have it only verified on 1.9.1. So lets revert to resolved on trunk. It's not so critical to verify.
Status: VERIFIED → RESOLVED
Closed: 15 years ago15 years ago
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: