Bug 505678: Downloadable font feature is broken with Sun Studio compiler r=jdaggett